--- a/stilizimi.css
+++ b/stilizimi.css
@@ -132,6 +132,17 @@ a {
     margin-right: 20px;
 
 }
+.pjesa-dyte {
+    font-size: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 70px;
+    text-align: left;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+
+
+}
 
 .pjesa-fundit-foto {
 
@@ -144,7 +155,7 @@ a {
 
 .pjesa-dyte-l {
     width: 100%;
-    height: auto;
+    height: 50px;
     display: flex;
 
 }
@@ -152,8 +163,9 @@ a {
 
 .gupemoshat {
 
-    width: 30%;
     padding: 15px;
+    padding-left: 55px;
+    padding-right: 55px;
     margin: 25px;
     background-color: #80546b;
     color: white;
@@ -174,8 +186,7 @@ a {
     height: 570px;
     background-color: none;
     margin: 40px;
-
-    width: auto;
+width: auto;
 
 }
 
@@ -198,12 +209,7 @@ a {
     height: 30%;
 }
 
-.pjesa-dyte-l {
-    width: 100%;
-    height: 550px;
-    display: flex;
 
-}
 
 .ndarjet-dy {
     margin: 60px;
@@ -218,6 +224,38 @@ a {
     margin: 20px;
     box-shadow: 10px 10px 30px rgb(183, 183, 183);
     margin-left: 25px;
+
+}
+.pjesa-pare {
+    width: 100%;
+    height: 680px;
+    display: flex;
+
+
+}
+
+.teksti-pare {
+    width: 40%;
+    /* text-align: center; */
+    justify-content: right;
+    align-items: right;
+    padding: 30px;
+}
+
+pre.teksti-pare {
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+.foto-pare {
+    width: 30%;
+    text-align: right;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 50px;
+    margin: 14px;
+
 
 }
 
@@ -322,7 +360,6 @@ table {
     display: flex;
     margin-top: 30px;
     margin-bottom: 30px;
-
 
 }
 
