--- a/stilizimi.css
+++ b/stilizimi.css
@@ -155,7 +155,7 @@ a {
 
 .pjesa-dyte-l {
     width: 100%;
-    height: 50px;
+    height: auto;
     display: flex;
 
 }
@@ -361,5 +361,24 @@ table {
     margin-top: 30px;
     margin-bottom: 30px;
 
+}
+
+dl {
+    display: block;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-left: 0;
+    margin-right: 20px;
+    text-align: end;
+}
+
+table {
+    border-spacing: 7px;
+}
+
+.dono
+{
+    background-color: rgb(165, 162, 162);
+    padding: 5px;
 }
 
