--- a/stilizimi.css
+++ b/stilizimi.css
@@ -382,3 +382,32 @@ table {
     padding: 5px;
 }
 
+
+.btn
+{
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color:#80546b;
+    padding: 10px;
+    margin: 3px;
+    border-radius: 3px;
+    transition: 1s ease;
+}
+
+.btn:hover
+{
+    transition: 1s ease;
+    background-color: #4CAF50;
+}
+
+.active
+{
+    background-color: green;
+}
+
+.filteri
+{
+    margin-left: 40px;
+}
+
