--- a/stilizimi.css
+++ b/stilizimi.css
@@ -209,8 +209,11 @@ a {
     margin: 20px;
     box-shadow: 10px 10px 30px rgb(183, 183, 183);
     margin-left: 25px;
+    
 
 }
+
+
 .pjesa-pare {
     width: 100%;
     height: 680px;
@@ -262,6 +265,7 @@ pre.teksti-pare {
 .butoni-meshume:hover {
     background-color: black;
     color: #e7cdbd;
+    transform: rotateX(360deg);
     
 }
 
