--- a/stilizimi.css
+++ b/stilizimi.css
@@ -448,3 +448,43 @@ header
 {
     background: none;
 }
+
+/* pjes shtes */
+.lajmet
+{
+    width: 100%;
+    height: auto;
+    display: flex;
+   
+}
+
+.tetriat
+{
+    margin: 60px;
+    width: 33%;
+    border-style: solid;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-width: 3px;
+    margin-top: 30px;
+    border-color: rgb(183, 183, 183);
+    margin: 20px;
+    box-shadow: 10px 10px 30px rgb(183, 183, 183);
+    margin-left: 25px;;
+  
+}
+.fotot11
+{
+    width: 100%;
+    height: auto;
+}
+
+ #lexomeshume
+{
+    padding: 10px;
+    margin: 15px;
+    background-color: #80546b;
+    border-radius: 5px;
+    color: wheat;
+}
